# delfos-v2

./: .gitignore  CLAUDE.md  PLAN.md  README.md  protocol.md  pyproject.toml
delfos/: __init__.py  __main__.py  _adc.py  central.py  events.py  field.py  protocol.py  session.py  transport.py  units.py
delfos/cli/: __init__.py  __main__.py  _app.py
delfos/jobs/: __init__.py  loader.py  migrate.py  runner.py  schema.py
delfos/measurements/: __init__.py  _helpers.py  chamada.py  res_contato.py  resistividade.py  sev.py  sp.py
delfos/platform/: __init__.py  pi.py
delfos/storage/: __init__.py  logs.py  paths.py  results.py
delfos/tui/: __init__.py  __main__.py  _app.py
tests/: _parity.py  conftest.py  test_central.py  test_cli.py  test_events.py  test_field.py  test_jobs.py  test_logs.py  test_measurements.py  test_parity.py  test_paths.py  test_platform_pi.py  test_protocol.py  test_results.py  test_runner.py  test_session.py  test_transport.py  test_tui.py  test_units.py
tests/fixtures/jobs/: ISC50_split.json
tests/fixtures/parity/runs/SC64_26_05_07_11_44/: debug.txt  job.json  job.toml  result.csv
tests/fixtures/parity/runs/ensaio_26_05_07_11_10/: debug.txt  job.json  job.toml  result.csv
tests/fixtures/parity/runs/isc32F_26_05_07_13_48/: debug.txt  job.json  job.toml  result.csv
